--- a/example/example.html
+++ b/example/example.html
@@ -60,10 +60,10 @@
 </script>
 
 <input type="hidden" name="toggleId" id="toggleId">
-<div id="main-container">	<#--필수요소-->
-	<div id="content-container">	<#--필수요소-->
-		<div id="toggle-container"></div>	<#--필수요소-->
-		<#-- 메인 컨텐츠 (리스트, 테이블 등)-->
+<div id="main-container">	<!--필수요소-->
+	<div id="content-container">	<!--필수요소-->
+		<div id="toggle-container"></div>	<!--필수요소-->
+		<!--메인 컨텐츠 (리스트, 테이블 등)-->
 		<div>
 			<table>
 				....
@@ -71,6 +71,6 @@
 		</div>
 
 		<!-- 사이드바 -->
-		<div id="side-container"></div>	<#--필수요소-->
+		<div id="side-container"></div>	<!--필수요소-->
 	</div>
 </div>
